--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,4 @@
-MONGODB_URL = mongodb+srv://jobportaluser:12345@cluster0.dbt9cfc.mongodb.net/jobfinder_DB
+MONGODB_URL = your_url
 
 JWT_SECRET_KEY = jobportaluser
 
